# EscapeVulkan

./: .gitignore  CMakeLists.txt  README.md
assets/models/: 74105 - Star Wars Sith Fury - License.html  bunny.glb
assets/scenes/: default.json  escapevulkan.json
include/: Agent.hpp  Camera.h  Camera.hpp  EventHandler.hpp  FixVector.hpp  MainContext.hpp  MoveActions.hpp  NeuralNet.hpp  SoundPlayer.hpp  Steering.hpp  Storage.hpp  UI.hpp  Window.h  Window.hpp  WorkContext.hpp  common.hpp  ve_log.h  ve_log.hpp
include/vk/: Buffer.hpp  CollisionHandler.hpp  CommandPool.hpp  ComputeObject.hpp  DescriptorSetHandler.hpp  ExtensionsHandler.h  ExtensionsHandler.hpp  Fireflies.hpp  Image.hpp  Instance.h  Instance.hpp  JetParticles.hpp  Lighting.hpp  LogicalDevice.h  LogicalDevice.hpp  Mesh.hpp  Model.hpp  PathTracer.hpp  PhysicalDevice.h  PhysicalDevice.hpp  Pipeline.hpp  RenderObject.hpp  RenderPass.hpp  Scene.hpp  Shader.hpp  Swapchain.h  Swapchain.hpp  Synchronization.hpp  Timer.hpp  Tunnel.hpp  TunnelConstants.hpp  TunnelObjects.hpp  VulkanCommandContext.hpp  VulkanMainContext.hpp  VulkanRenderContext.hpp  VulkanStorageContext.hpp  VulkanWithDefines.hpp  common.hpp
include/vk/gpu_data/: FireflyGpuData.hpp  JetParticlesGpuData.hpp  TunnelGpuData.hpp
shader/: basic.frag  common.glsl  create_noise_textures.comp  debug.frag  debug.vert  default.frag  default.vert  emissive.frag  emissive.vert  fireflies.frag  fireflies.vert  fireflies_move.comp  fireflies_tunnel_collision.comp  functions.glsl  jet_particles.frag  jet_particles.vert  jet_particles_move.comp  lighting.frag  player_tunnel_collision.comp  stone_noise.frag  tunnel.comp  tunnel.frag  tunnel.vert  tunnel_normals.comp  tunnel_skybox.frag  tunnel_skybox.vert  utils.glsl
src/: Agent.cpp  Camera.cpp  EventHandler.cpp  MainContext.cpp  NeuralNet.cpp  SoundPlayer.cpp  Steering.cpp  Storage.cpp  UI.cpp  Window.cpp  WorkContext.cpp  main.cpp
src/vk/: CollisionHandler.cpp  CommandPool.cpp  ComputeObject.cpp  DescriptorSetHandler.cpp  ExtensionsHandler.cpp  Fireflies.cpp  Image.cpp  Instance.cpp  JetParticles.cpp  Lighting.cpp  LogicalDevice.cpp  Mesh.cpp  Model.cpp  PathTracer.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderObject.cpp  RenderPass.cpp  Scene.cpp  Shader.cpp  Swapchain.cpp  Synchronization.cpp  Timer.cpp  Tunnel.cpp  TunnelObjects.cpp  VulkanCommandContext.cpp  VulkanMainContext.cpp  VulkanRenderContext.cpp  VulkanStorageContext.cpp
